--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
-    "shortid": "^2.2.16"
+    "commander": "^11.0.0",
+    "nanoid": "^3.3.4"
   }
 }
